demo/src/main/java/com/example/demo/errors/ClienteException.java
package com.example.demo.errors;

public class ClienteException extends RuntimeException 
{
    public ClienteException(Long id) {
        super("Cliente not found with ID: " + id);
    }
    
}
